--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/idgm5/restaurantJS#readme",
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "lodash-webpack-plugin": "^0.11.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
